--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "react-scripts": "3.4.4",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
-    "styled-components": "^5.2.0"
+    "reselect": "^4.0.0",
+    "styled-components": "^5.2.0",
+    "universal-cookie": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
