--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
     "styled-components": "^5.2.0",
-    "universal-cookie": "^4.0.4"
+    "universal-cookie": "^4.0.4",
+    "use-file-upload": "^1.0.9"
   },
   "scripts": {
     "start": "react-scripts start",
